# binstat

./: Cargo.toml  README.md
src/: bystrand.rs  depth.rs  gc.rs  main.rs  tag.rs
test/: BS.bam  BS.bam.bai  BS.cram  BS.cram.crai  MT.fa
