[package]
name = "binstat"
description = "stat genomics data by bin"
version = "0.0.1"
edition = "2021"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "LGPL-3.0+"
documentation = "https://docs.rs/crate/binstat/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", default-features = false, features = ["std", "derive", "color"] }
rust-htslib = "0.38.2"
